# mimo-vision-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/mimo_vision_mcp/: __init__.py  __main__.py  server.py
src/mimo_vision_mcp/api/: client.py
src/mimo_vision_mcp/tools/: recognize.py
src/mimo_vision_mcp/utils/: image.py  prompts.py
tests/: test_client.py  test_image_utils.py  test_prompts.py  test_recognize.py
