[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimo-vision-mcp"
version = "0.1.0"
description = "MCP server for image recognition via mimo-v2.5"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mimo_vision_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
